ensure any Ember action is triggered on iOS Safari

--- a/frontend/app/styles/global.scss
+++ b/frontend/app/styles/global.scss
@@ -104,3 +104,8 @@ input[type="submit"] {
     font-style: italic;
   }
 }
+
+// https://github.com/emberjs/ember.js/issues/13171#issuecomment-200521638
+[data-ember-action] {
+  cursor: pointer;
+}
